python-basic-game-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-game-service
spec:
  selector:
    app: python-game-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
