python-basic-game-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-game-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: game.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-game-service
                port:
                  number: 80
